{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 35,
  "lineage": "af45bd2b-3772-37c3-a318-a8a8d1285d59",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc5d8a61b84e8b2b",
            "arn": "arn:aws:ec2:eu-west-2:053732977191:elastic-ip/eipalloc-0bc5d8a61b84e8b2b",
            "association_id": "eipassoc-02cb264820af22916",
            "domain": "vpc",
            "id": "eipalloc-0bc5d8a61b84e8b2b",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0949522f240249257",
            "private_dns": "ip-10-0-1-23.eu-west-2.compute.internal",
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-3-11-229-199.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.11.229.199",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-project-dev-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-nat-eip",
              "Project": "my-project"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:internet-gateway/igw-0498f133f85287c32",
            "id": "igw-0498f133f85287c32",
            "owner_id": "053732977191",
            "tags": {
              "Name": "my-project-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-igw",
              "Project": "my-project"
            },
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bc5d8a61b84e8b2b",
            "association_id": "eipassoc-02cb264820af22916",
            "connectivity_type": "public",
            "id": "nat-0862293d32525dc83",
            "network_interface_id": "eni-0949522f240249257",
            "private_ip": "10.0.1.23",
            "public_ip": "3.11.229.199",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04a732b3941c7445b",
            "tags": {
              "Name": "my-project-dev-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-nat",
              "Project": "my-project"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:route-table/rtb-0dee842ef29da7445",
            "id": "rtb-0dee842ef29da7445",
            "owner_id": "053732977191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0862293d32525dc83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-project-dev-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-private-rt",
              "Project": "my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:route-table/rtb-04d7928aa4d222700",
            "id": "rtb-04d7928aa4d222700",
            "owner_id": "053732977191",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0498f133f85287c32",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-project-dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-public-rt",
              "Project": "my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00316ac55706d68b9",
            "route_table_id": "rtb-0dee842ef29da7445",
            "subnet_id": "subnet-0c6652021f209c696"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086439fe8beb543b9",
            "route_table_id": "rtb-0dee842ef29da7445",
            "subnet_id": "subnet-01defadfcabaafd44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat",
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_nat_gateway.this",
            "module.networking.aws_route_table.private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075da9c2ce2063182",
            "route_table_id": "rtb-04d7928aa4d222700",
            "subnet_id": "subnet-04a732b3941c7445b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8a5251933fed914",
            "route_table_id": "rtb-04d7928aa4d222700",
            "subnet_id": "subnet-029b669cb5561e322"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.this",
            "module.networking.aws_route_table.public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:subnet/subnet-0c6652021f209c696",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6652021f209c696",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053732977191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-dev-public-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-public-1",
              "Project": "my-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:subnet/subnet-01defadfcabaafd44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01defadfcabaafd44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053732977191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-dev-public-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-public-2",
              "Project": "my-project",
              "Tier": "private"
            },
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:subnet/subnet-04a732b3941c7445b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a732b3941c7445b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "053732977191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-dev-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-public-1",
              "Project": "my-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:subnet/subnet-029b669cb5561e322",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029b669cb5561e322",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "053732977191",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-dev-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-public-2",
              "Project": "my-project",
              "Tier": "public"
            },
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:vpc/vpc-07f0c673c9605f4fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ab844337a6b86006",
            "default_route_table_id": "rtb-0c0c4c2135ea48efa",
            "default_security_group_id": "sg-02f25217b7ad0796a",
            "dhcp_options_id": "dopt-042b6ae5c94d8e67f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f0c673c9605f4fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c0c4c2135ea48efa",
            "owner_id": "053732977191",
            "tags": {
              "Name": "my-project-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-vpc",
              "Project": "my-project"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group/sg-02f25217b7ad0796a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02f25217b7ad0796a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "053732977191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-project-dev-default-sg-locked"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-default-sg-locked",
              "Project": "my-project"
            },
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group/sg-0f74eacfe6336d3e8",
            "description": "Application tier - HTTP/HTTPS inbound, all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f74eacfe6336d3e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-project-dev-app-sg",
            "name_prefix": "",
            "owner_id": "053732977191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-project-dev-app-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-app-sg",
              "Project": "my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group/sg-06e6195e5befc1083",
            "description": "Bastion host - SSH inbound from trusted CIDR only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e6195e5befc1083",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from trustd CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-project-dev-bastion-sg",
            "name_prefix": "",
            "owner_id": "053732977191",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-project-dev-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-bastion-sg",
              "Project": "my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f0c673c9605f4fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group-rule/sgr-05466649738c8f35e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-05466649738c8f35e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f74eacfe6336d3e8",
            "security_group_rule_id": "sgr-05466649738c8f35e",
            "tags": {
              "Name": "my-project-dev-app-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-app-egress",
              "Project": "my-project"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bastion_all_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group-rule/sgr-0aa5012ce2e8c580b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": null,
            "id": "sgr-0aa5012ce2e8c580b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06e6195e5befc1083",
            "security_group_rule_id": "sgr-0aa5012ce2e8c580b",
            "tags": {
              "Name": "my-project-dev-bastion-egress"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-bastion-egress",
              "Project": "my-project"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group-rule/sgr-049466641a365c556",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTP from anywhere",
            "from_port": 80,
            "id": "sgr-049466641a365c556",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f74eacfe6336d3e8",
            "security_group_rule_id": "sgr-049466641a365c556",
            "tags": {
              "Name": "my-project-dev-app-http"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-app-http",
              "Project": "my-project"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group-rule/sgr-0f2e6d25c65c5725f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow HTTPS from anywhere",
            "from_port": 443,
            "id": "sgr-0f2e6d25c65c5725f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f74eacfe6336d3e8",
            "security_group_rule_id": "sgr-0f2e6d25c65c5725f",
            "tags": {
              "Name": "my-project-dev-app-https"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-app-https",
              "Project": "my-project"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.app"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:053732977191:security-group-rule/sgr-096d6f185eea5bccc",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow SSH from trustd CIDR",
            "from_port": 22,
            "id": "sgr-096d6f185eea5bccc",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06e6195e5befc1083",
            "security_group_rule_id": "sgr-096d6f185eea5bccc",
            "tags": {
              "Name": "my-project-dev-bastion-ssh"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "my-project-dev-bastion-ssh",
              "Project": "my-project"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.this",
            "module.security.aws_security_group.bastion"
          ]
        }
      ]
    }
  ]
}